--- a/index.html
+++ b/index.html
@@ -117,6 +117,6 @@ address
 <span id="p" style="color:white; font-size:20px">Created by </span><span id="r" style="color:red; font-size:20px">Mr.Web Designer</span><span id="s" style="color:white; font-size:20px">| All Rights Reserved</span>
 </fieldset>
 </div>
-<a href="1.html"><button>For More</button></a>
+<a href="https://kishoremalimelu.github.io/html-files/1.html"><button>For More</button></a>
 </body>
 </html>
